# ml-markowitz

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/ml_markowitz/: config.py  data.py
src/ml_markowitz/models/: __init__.py  lgbm.py
tests/: __init__.py  test_lgbm.py
